--- a/.github/workflows/epg_update.yml
+++ b/.github/workflows/epg_update.yml
@@ -1,8 +1,8 @@
-name: Atualizar EPG VivoPlay a cada hora
+name: Atualizar apenas o EPG VivoPlay a cada hora
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Executa a cada 1 hora
+    - cron: '0 * * * *'  # Executa de hora em hora
   workflow_dispatch:
 
 jobs:
@@ -10,8 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clonar repositório
+      - name: Checkout do seu repositório
         uses: actions/checkout@v3
+
+      - name: Clonar o repositório oficial iptv-org/epg
+        run: git clone --depth=1 https://github.com/iptv-org/epg.git
 
       - name: Instalar Node.js
         uses: actions/setup-node@v3
@@ -19,15 +22,27 @@ jobs:
           node-version: '18'
 
       - name: Instalar dependências
-        run: npm install
+        run: |
+          cd epg
+          npm install
 
-      - name: Gerar novo EPG
-        run: npm run grab --- --site=vivoplay.com.br --output=guide.xml
+      - name: Rodar o grab apenas da VivoPlay
+        run: |
+          cd epg
+          npm run grab --- --site=vivoplay.com.br --output=guide.xml
 
-      - name: Commit e Push
+      - name: Copiar o guide.xml gerado para a raiz do seu repositório
+        run: cp epg/guide.xml .
+
+      - name: Configurar Git
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+
+      - name: Fazer Commit e Push
+        env:
+          TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
           git add guide.xml
-          git commit -m "Atualização automática - $(date '+%Y-%m-%d %H:%M:%S')" || echo "Sem mudanças"
-          git push
+          git commit -m "EPG VivoPlay atualizado automaticamente - $(date '+%Y-%m-%d %H:%M:%S')" || echo "Nenhuma alteração"
+          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git HEAD:master
