--- a/.github/workflows/epg_update.yml
+++ b/.github/workflows/epg_update.yml
@@ -41,4 +41,4 @@ jobs:
             echo "Nenhuma mudança detectada"
           else
             git commit -m "Atualização automática VivoPlay - $(date '+%Y-%m-%d %H:%M:%S')"
-            git push
+            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:master
