--- a/.github/workflows/epg_update.yml
+++ b/.github/workflows/epg_update.yml
@@ -1,8 +1,8 @@
-name: Atualizar EPG VivoPlay a cada 1 hora
+name: Atualizar EPG VivoPlay
 
 on:
   schedule:
-    - cron: '0 * * * *'  # a cada 1 hora
+    - cron: '0 * * * *'  # Toda hora no minuto zero
   workflow_dispatch:
 
 jobs:
@@ -10,16 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Clonar o repositório original do iptv-org/epg (código e configs)
       - name: Clonar repositório iptv-org/epg
-        run: git clone --depth 1 https://github.com/iptv-org/epg.git epg-org
-
-      - name: Rodar parser do vivoplay e gerar guide.xml
         run: |
-          cd epg-org
+          git clone https://github.com/iptv-org/epg.git epg
+          cd epg
           npm install
+
+      # 2. Rodar o comando para atualizar o EPG do vivoplay
+      - name: Atualizar EPG vivo play
+        run: |
+          cd epg
+          npm run grab --- --site=vivoplay.com.br
           npm run channels:parse --- --config=./sites/vivoplay.com.br/vivoplay.com.br.config.js --output=../guide.xml
 
-      - name: Fazer commit e push se tiver alteração
+      # 3. Fazer commit e push do guide.xml atualizado para seu repositório
+      - name: Commit e push guide.xml atualizado
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
@@ -27,6 +33,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "Nenhuma mudança detectada"
           else
-            git commit -m "Atualização automática VivoPlay - $(date '+%Y-%m-%d %H:%M:%S')"
-            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:master
+            git commit -m "Atualização automática do EPG VivoPlay - $(date '+%Y-%m-%d %H:%M:%S')"
+            git push origin HEAD:main
           fi
