--- a/.github/workflows/epg_update.yml
+++ b/.github/workflows/epg_update.yml
@@ -1,8 +1,8 @@
-name: Atualizar EPG VivoPlay
+name: Atualizar EPG VivoPlay a cada 1 hora
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Toda hora no minuto zero
+    - cron: '0 * * * *'  # a cada 1 hora
   workflow_dispatch:
 
 jobs:
@@ -10,29 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Clonar o repositório original do iptv-org/epg (código e configs)
-      - name: Clonar repositório iptv-org/epg
+      - name: Checkout do repositório
+        uses: actions/checkout@v3
+
+      - name: Clonar repositório original do EPG
+        run: git clone --depth 1 https://github.com/iptv-org/epg.git epg-org
+
+      - name: Rodar comando para atualizar channels
+        working-directory: ./epg-org
         run: |
-          git clone https://github.com/iptv-org/epg.git epg
-          cd epg
           npm install
+          npm run channels:parse --- --config=./sites/vivoplay.com.br/vivoplay.com.br.config.js --output=../../guide.xml
 
-      # 2. Rodar o comando para atualizar o EPG do vivoplay
-      - name: Atualizar EPG vivo play
-        run: |
-          cd epg
-          npm run grab --- --site=vivoplay.com.br
-          npm run channels:parse --- --config=./sites/vivoplay.com.br/vivoplay.com.br.config.js --output=../guide.xml
-
-      # 3. Fazer commit e push do guide.xml atualizado para seu repositório
-      - name: Commit e push guide.xml atualizado
+      - name: Configurar git
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
+
+      - name: Commit e Push (se houver mudanças)
+        run: |
           git add guide.xml
           if git diff --cached --quiet; then
             echo "Nenhuma mudança detectada"
           else
             git commit -m "Atualização automática do EPG VivoPlay - $(date '+%Y-%m-%d %H:%M:%S')"
-            git push origin HEAD:main
+            git push
           fi
