--- a/.github/workflows/epg_update.yml
+++ b/.github/workflows/epg_update.yml
@@ -2,7 +2,7 @@ name: Atualizar EPG VivoPlay a cada 1 hora
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 * * * *'  # a cada 1 hora
   workflow_dispatch:
 
 jobs:
@@ -18,19 +18,11 @@ jobs:
       - name: Clonar repositório original do EPG
         run: git clone --depth 1 https://github.com/iptv-org/epg.git epg-org
 
-      - name: Instalar dependências
-        working-directory: ./epg-org
-        run: npm install
-
-      - name: Atualizar lista de canais (parse)
+      - name: Rodar comando para atualizar channels
         working-directory: ./epg-org
         run: |
-          npm run channels:parse --- --config=./sites/vivoplay.com.br/vivoplay.com.br.config.js --output=./sites/vivoplay.com.br/vivoplay.com.br.channels.xml
-
-      - name: Gerar guide.xml com timezone correto
-        working-directory: ./epg-org
-        run: |
-          npm run grab --- --site=vivoplay.com.br --output=../../guide.xml --timezone=America/Sao_Paulo
+          npm install
+          npm run channels:parse --- --config=./sites/vivoplay.com.br/vivoplay.com.br.config.js --output=../../guide.xml
 
       - name: Configurar git
         run: |
@@ -43,7 +35,7 @@ jobs:
           if git diff --cached --quiet; then
             echo "Nenhuma mudança detectada"
           else
-            export TZ=America/Sao_Paulo
+            export TZ=Etc/GMT-3
             git commit -m "Atualização automática do EPG VivoPlay - $(date '+%Y-%m-%d %H:%M:%S')"
             git push
           fi
