--- a/.github/workflows/epg_update.yml
+++ b/.github/workflows/epg_update.yml
@@ -34,11 +34,13 @@ jobs:
           git config user.email "github-actions@users.noreply.github.com"
 
       - name: Commit e Push (se houver mudanças)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add guide.xml
           if git diff --cached --quiet; then
             echo "Nenhuma mudança detectada"
           else
             git commit -m "Atualização automática do EPG VivoPlay - $(date '+%Y-%m-%d %H:%M:%S')"
-            git push
+            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
           fi
