--- a/.github/workflows/epg_update.yml
+++ b/.github/workflows/epg_update.yml
@@ -2,7 +2,7 @@ name: Atualizar EPG VivoPlay a cada 1 hora
 
 on:
   schedule:
-    - cron: '0 * * * *'  # A cada 1 hora
+    - cron: '0 * * * *'  # a cada 1 hora
   workflow_dispatch:
 
 jobs:
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout do repositório
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Clonar repositório original do EPG
         run: git clone --depth 1 https://github.com/iptv-org/epg.git epg-org
@@ -22,25 +24,22 @@ jobs:
           npm install
           npm run channels:parse --- --config=./sites/vivoplay.com.br/vivoplay.com.br.config.js --output=../../guide.xml
 
-      - name: Instalar xmlstarlet (para formatar o XML)
-        run: sudo apt-get update && sudo apt-get install -y xmlstarlet
+      - name: Ajustar timezone do guide.xml para +3
+        run: |
+          sed -E -i 's/(start="([0-9]{14}) )\+0000"/echo "\1+0300"/ge' ../../guide.xml
+          sed -E -i 's/(stop="([0-9]{14}) )\+0000"/echo "\1+0300"/ge' ../../guide.xml
 
-      - name: Formatar guide.xml
-        run: xmlstarlet fo guide.xml > guide_temp.xml && mv guide_temp.xml guide.xml
-
-      - name: Configurar Git
+      - name: Configurar git
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
 
       - name: Commit e Push (se houver mudanças)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add guide.xml
           if git diff --cached --quiet; then
             echo "Nenhuma mudança detectada"
           else
             git commit -m "Atualização automática do EPG VivoPlay - $(date '+%Y-%m-%d %H:%M:%S')"
-            git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
+            git push
           fi
